--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,6 +9,15 @@
         {% endif %}
     </head>
     <body>
+        <!-- Popular movie section  -->
+        <h3> Popular Movies</h3>
+         <ul>
+            {% for popular_movie in popular %}
+                <li>{{ popular_movie.title}}</li>
+            {% endfor %}
+        </ul>
+ </body>
+    
 
-    </body>
+    
 </html>
