added a link code

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,6 +8,7 @@
         <title> Welcome to the best Movie Review website </title>
         {% endif %}
     </head>
+    {% import 'macros.html' as macro%}
     <body>
         <!-- Popular movie section  -->
         <h3> Popular Movies</h3>
