--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,39 +1,43 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        {% if title %}
-        <title> {{ title }}</title>
-        {% else %}
-        <title> Welcome to the best Movie Review website </title>
-        {% endif %}
-    </head>
-    {% import 'macros.html' as macro%}
-    <body>
-        <!-- Popular movie section  -->
-        <h3> Popular Movies</h3>
-         <ul>
-            {% for popular_movie in popular %}
-                <li>{{ popular_movie.title}}</li>
-            {% endfor %}
-        </ul>
-         <!-- Upcoming movie  -->
-         <h3> Upcoming Movies </h3>
-         <ul>
-            {% for upcoming_movie in upcoming %}
-                <li>{{ upcoming_movie.title}}</li>
-            {% endfor %}
-        </ul>
-        <!-- Now showing movie -->
-        <h3>Now Showing</h3>
-         <ul>
-            {% for now_showing_movie in now_showing %}
-                <li>{{ now_showing_movie.title}}</li>
-            {% endfor %}
-        </ul>
-        
- </body>
-    
+{% extends 'base.html'%}
+{% import 'macros.html' as macro%}
 
-    
-</html>
+{% if title %}
+<title> {{ title }}</title>
+{% else %}
+<title> Welcome to the best Movie Review website </title>
+{% endif %}
+
+<!-- Styles block -->
+
+{% block styles%}
+{{ super() }}
+<link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
+{% endblock %}
+<!-- Content block -->
+{% block content %}
+
+<div class="container">
+    <form>
+        <input type="text" name="movie_query" placeholder="Search for a Movie" class="form-control">
+        <input type="submit"  value="Submit" class="btn btn-default">
+    </form>
+
+</div>
+
+<!-- Popular movie -->
+<h3> Popular Movies</h3>
+<ul>
+    {{ macro.displayMovieList(popular)}}
+</ul>
+<!-- Upcoming movie  -->
+<h3> Upcoming Movies </h3>
+<ul>
+    {{ macro.displayMovieList(upcoming)}}
+</ul>
+<!-- Now showing movie -->
+<h3>Now Showing</h3>
+<ul>
+    {{ macro.displayMovieList(now_showing)}}
+</ul>
+
+{% endblock%}
